Integrated Piotr's color and contrast
Squashed commit of the following:

commit 938230f2850cdc71d2b6eeeeb656323406962458
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Nov 22 13:47:57 2013 +0100

    Add contrasted colour scheme and color variations.

    Conflicts:
    	app/assets/images/backgrounds/thumb-catalog-backg.png
    	app/assets/images/backgrounds/thumb-catalog-backg@2x.png
    	app/assets/stylesheets/_config.sass
    	app/assets/stylesheets/application.sass
    	app/assets/stylesheets/combos/_ui-clipboard.sass
    	app/assets/stylesheets/combos/_ui-featured-entries.sass
    	app/assets/stylesheets/combos/_ui-resources-common.sass
    	app/assets/stylesheets/combos/_ui-resources-grid.sass
    	app/assets/stylesheets/combos/_ui-resources-list.sass
    	app/assets/stylesheets/combos/_ui-resources-miniature.sass
    	app/assets/stylesheets/components/_ui-body-title.sass
    	app/assets/stylesheets/components/_ui-containers.sass
    	app/assets/stylesheets/components/_ui-tabs.sass
    	app/assets/stylesheets/components/_ui-thumb-catalog.sass
    	app/assets/stylesheets/components/_ui-thumb.sass
    	app/assets/stylesheets/general/_buttons.sass
    	app/views/application/header/_user.html.haml
    	app/views/layouts/styleguide.html.haml

--- a/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_keywords.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_keywords.tmpl.haml
@@ -7,6 +7,7 @@
     %li.multi-select-input-holder.mbs
       %input.multi-select-input.form-autocomplete-keywords{:id => "resource[meta_data_attributes][${index}][value]", :type => "text"}
         %a.multi-select-input-toggle
+          %i.icon-arrow-down
 
     %a.button.small.form-widget-toggle
       %i.icon-tag.dark.small
