--- a/app/assets/stylesheets/combos/_ui-clipboard.sass
+++ b/app/assets/stylesheets/combos/_ui-clipboard.sass
@@ -12,7 +12,7 @@
   +dimension(260px, 20px)
   +position-top-right(-30px, 50%)
   +position-left(50%)
-  color: $brightest
+  color: $mono-brightest
   margin-left: -135px
   padding: $space-x $space-x $space-x
   text-align: center
@@ -47,7 +47,7 @@
 .ui-clipboard-alert
   +border-radius($border-radius-m)
   border: 1px solid $lighten
-  color: $grey-lighter
+  color: $mono-bright
   height: 32px
   margin: $space-s $space-s
   padding: $space-s
@@ -72,7 +72,7 @@
 .ui-clipboard-item-counter
   +border-radius(50px)
   +min-dimension(12px, auto)
-  color: $grey-mid
+  color: $mono-mid
   font-size: 10px
   font-weight: 700
   line-height: 1
@@ -120,7 +120,7 @@
 // MenuCounter
 
 .ui-clipboard .ui-clipboard-actions .ui-count
-  color: $grey-mid
+  color: $mono-mid
   font-size: 10px
   font-weight: 700
   line-height: 1
@@ -134,3 +134,13 @@
   .ui-thumbnail.filter-set
     background: transparent image-url("backgrounds/thumb-set-backg-small-alt@2x.png") -1px 0px no-repeat
     background-size: 82px 82px
+
+/* Projection Styles
+ *-----------------------------------------
+
+@if $projection
+
+  .ui-clipboard .ui-resources.miniature
+    .ui-thumbnail.media-set,
+    .ui-thumbnail.filter-set
+      background: transparent image-url("backgrounds/thumb-set-backg-small-alt-projct.png") -1px 0px no-repeat
