--- a/app/assets/stylesheets/combos/_ui-home-claim.sass
+++ b/app/assets/stylesheets/combos/_ui-home-claim.sass
@@ -7,7 +7,7 @@
   +border-radius($border-radius-m)
   +box-shadow(0 1px 3px $darken-more)
   background: $lighten-strong
-  border: 1px solid $grey-dark
+  border: 1px solid $mono-strong
   padding: $space-m
 
 .pitch-claim
@@ -27,8 +27,8 @@
 
 .pitch-login-tab
   +border-bottom-radius($border-radius-m)
-  border: 1px solid $grey-mid-light
-  background: $brightest
+  border: 1px solid $mono-light
+  background: $mono-brightest
   min-height: 150px
   padding: $space-s $space-m $space-m
 
