--- a/app/assets/stylesheets/combos/_ui-media-overview.sass
+++ b/app/assets/stylesheets/combos/_ui-media-overview.sass
@@ -20,7 +20,7 @@
 
 .ui-media-overview-preview
   +border-top-right-radius($border-radius-m)
-  border-left: 1px solid $grey-mid-light
+  border-left: 1px solid $mono-light
   text-align: center
   padding-left: $space-l
   position: relative
