--- a/app/assets/stylesheets/combos/_ui-resources-page.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-page.sass
@@ -5,7 +5,7 @@
 
 .ui-resources-page
   +micro-clearfix
-  border-top: 1px solid $grey-mid-light
+  border-top: 1px solid $mono-light
   padding: $space-l 0 $space-m 0
   position: relative
   &:first-child
@@ -15,7 +15,7 @@
   +dimension(200px, auto)
   +position-top-right(0, 0)
   &, & > span
-    color: $grey-mid
+    color: $mono-mid
     text-align: right
     font-size: $font-xs
     font-weight: 700
