--- a/app/assets/stylesheets/combos/_ui-resources-table.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-table.sass
@@ -11,12 +11,12 @@
     width: 100%
     td, th
       vertical-align: middle
-      border-bottom: 1px solid $grey-mid-light
+      border-bottom: 1px solid $mono-light
   tbody
-    color: $grey-mid
+    color: $mono-mid
     font-size: $font-s
     tr td[data-name='title']
-      color: $grey-mid-dark
+      color: $mono-heavy
   .ui-resources-table-selection
     width: 75px
     input,
