--- a/app/assets/stylesheets/combos/_upload.sass
+++ b/app/assets/stylesheets/combos/_upload.sass
@@ -13,7 +13,7 @@
   +single-text-shadow(false, 1px, 0, false, $lighten-more)
   +position-top-right(40%, 0)
   +position-bottom-left(40%, 0)
-  color: $grey-mid
+  color: $mono-mid
   font-size: $font-l
   font-weight: 700
   text-align: center
