--- a/app/assets/stylesheets/components/_ui-alerts.sass
+++ b/app/assets/stylesheets/components/_ui-alerts.sass
@@ -11,7 +11,7 @@
 .ui-alerts
 
 .ui-alert
-  background: $grey-lighter
+  background: $mono-bright
   padding: $space-x
   font-weight: 600
   text-align: center
@@ -24,7 +24,7 @@
 .ui-alert.confirmation
   +box-shadow(inset 0 1px 0 $lighten-less, inset 0 -1px 0 $darken)
   +single-text-shadow(false, 1px, false, false, $darken)
-  color: $brightest
+  color: $mono-brightest
 
 .ui-alert.success
   background: $green
