--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -25,7 +25,7 @@
   a
     clear: both
     color: #333333
-    border-bottom: 1px solid $grey-lighter
+    border-bottom: 1px solid $mono-bright
     display: block
     font-weight: normal
     line-height: 20px
