--- a/app/assets/stylesheets/components/_ui-form-group.sass
+++ b/app/assets/stylesheets/components/_ui-form-group.sass
@@ -30,7 +30,7 @@
   padding: $space-m $space-s
   position: relative
   > .form-label
-    color: $grey-darker
+    color: $mono-dark
   &.compact
     margin-bottom: -$space-s
     padding: $space-s $space-x
@@ -60,7 +60,7 @@
     font-weight: 700
     padding-bottom: $space-s
     small
-      color: $grey-mid
+      color: $mono-mid
       font-size: $font-xs
       font-weight: normal
       margin-left: $space-s
@@ -84,7 +84,7 @@
  *-----------------------------------------
 .ui-form-group.columned
   +micro-clearfix
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $mono-weak
   padding-right: 50px
   position: relative
   > .form-label
@@ -94,7 +94,7 @@
     padding-bottom: $space-s
     width: 175px
     small
-      color: $grey-mid
+      color: $mono-mid
       display: block
       font-size: $font-xs
       font-weight: normal
