--- a/app/assets/stylesheets/components/_ui-modals.sass
+++ b/app/assets/stylesheets/components/_ui-modals.sass
@@ -13,8 +13,8 @@
   +border-radius($border-radius-m)
   +box-shadow(0 1px 3px $darken-more)
   +dimension(550px, auto)
-  background: $brightest
-  border: 1px solid $grey-darker
+  background: $mono-brightest
+  border: 1px solid $mono-dark
   z-index: 2001
   // clipboard is 2000
   &.transparent
@@ -26,13 +26,13 @@
 .ui-modal-toolbar,
 .ui-modal-body,
 .ui-modal-footer
-  border-color: $grey-mid-light
+  border-color: $mono-light
   border-style: solid
   padding: $space-s
 
 .ui-modal-head,
 .ui-modal-footer
-  background: $grey-light
+  background: $mono-weak
 
 .ui-modal-head
   +border-top-radius($border-radius-m)
