--- a/app/assets/stylesheets/components/_ui-selected-entry-control.sass
+++ b/app/assets/stylesheets/components/_ui-selected-entry-control.sass
@@ -1,7 +1,7 @@
 .ui-selected-entry-control
   position: relative
   text-align: center
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $mono-weak
 
   .ui-selected-entry-control-container
     display: inline-block
@@ -28,7 +28,7 @@
 
     .ui-current-entry
       background: none
-      border: 1px solid $grey-light
+      border: 1px solid $mono-weak
       cursor: default
       margin-bottom: -1px
       padding-bottom: $space-x * 2
@@ -48,7 +48,7 @@
       .ui-entry-control-arrow
         border-top: 14px solid transparent
         border-bottom: 14px solid transparent
-        border-right: 14px solid $grey-mid
+        border-right: 14px solid $mono-mid
         position: absolute
         left: $space-s
         top: $space-s
@@ -62,7 +62,7 @@
       .ui-entry-control-arrow
         border-top: 14px solid transparent
         border-bottom: 14px solid transparent
-        border-left: 14px solid $grey-mid
+        border-left: 14px solid $mono-mid
         position: absolute
         right: $space-s
         top: $space-s
