--- a/app/assets/stylesheets/components/_ui-set-list.sass
+++ b/app/assets/stylesheets/components/_ui-set-list.sass
@@ -4,7 +4,7 @@
  * Styleguide 6.20
 
 .ui-set-list-item
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $mono-weak
   display: block
   list-style: none
   padding: $space-x $space-x $space-x 25px
@@ -12,7 +12,7 @@
   &:last-child
     border: none
   &:hover
-    background: $grey-lighter
+    background: $mono-bright
   &.highlight
     background-color: lighten($yellow, 50%)
     input
@@ -32,7 +32,7 @@
 
 .ui-set-list-item .owner,
 .ui-set-list-item .created-at
-  color: $grey-mid
+  color: $mono-mid
   font-size: $font-s
 
 .ui-set-list-item .created-at
