--- a/app/assets/stylesheets/components/_ui-side-navigation.sass
+++ b/app/assets/stylesheets/components/_ui-side-navigation.sass
@@ -16,7 +16,7 @@
   padding: $space-x 0
 
 .ui-side-navigation-item.active > a
-  color: $grey-darker
+  color: $mono-dark
   cursor: default
 
 // 2nd Level navigation list
