--- a/app/assets/stylesheets/components/_ui-tabs.sass
+++ b/app/assets/stylesheets/components/_ui-tabs.sass
@@ -32,7 +32,7 @@
 .ui-tabs-item.active a,
 .ui-tabs-item a.active
   +box-shadow(none)
-  background: $brightest
+  background: $mono-brightest
 
 // Colour variations
 .ui-tabs.primary .ui-tabs-item a
@@ -53,9 +53,9 @@
   +single-text-shadow(false, 1px, 0, false, $lighten-more)
   background: $body-background
   border: none
-  color: $grey-darker
+  color: $mono-dark
   i
-    color: $grey-darker
+    color: $mono-dark
 
 // Size variations
 
