--- a/app/assets/stylesheets/components/_ui-thumb-actions.sass
+++ b/app/assets/stylesheets/components/_ui-thumb-actions.sass
@@ -13,10 +13,10 @@
     list-style: none
     margin: 0 2px
     a
-      color: $grey-mid
+      color: $mono-mid
       text-decoration: none !important
       &:hover
-        color: $grey-darker
+        color: $mono-dark
 
 .ui-thumbnail-action-checkbox.active
   .icon-checkbox
@@ -30,7 +30,7 @@
     i
 
 .ui-thumbnail-action
-  color: $grey-mid-dark
+  color: $mono-heavy
   .active i,
   &:hover
-    color: $grey-darker
+    color: $mono-dark
