--- a/app/assets/stylesheets/components/_ui-thumb-micro.sass
+++ b/app/assets/stylesheets/components/_ui-thumb-micro.sass
@@ -6,5 +6,5 @@
 .ui-thumbnail.micro
   +dimension(25px, 25px)
   +border-radius($border-radius-s)
-  border: 1px solid $grey-mid-light
+  border: 1px solid $mono-light
   padding: 2px
