--- a/app/assets/stylesheets/general/_icons.sass
+++ b/app/assets/stylesheets/general/_icons.sass
@@ -2,10 +2,10 @@
   font-size: 16px
 
 [class*="icon-"].bright
-  color: $brightest
+  color: $mono-brightest
 
 [class*="icon-"].mid
-  color: $grey-mid
+  color: $mono-mid
 
 [class*="icon-"].green
   color: $green
