--- a/app/assets/stylesheets/overrides/_jquery.plupload.queue.sass
+++ b/app/assets/stylesheets/overrides/_jquery.plupload.queue.sass
@@ -26,9 +26,9 @@ li.plupload_failed a
 
 li.plupload_done a
   +dimension(20px, 20px)
-  color: $grey-dark
+  color: $mono-strong
   &:hover
-    color: $grey-darker
+    color: $mono-dark
     text-decoration: none
 
 .plupload_file_action
@@ -156,7 +156,7 @@ li.plupload_done a
 #call2action
   +position-top-right(40%, 20px)
   +position-top-left(40%, 20px)
-  color: $grey-mid
+  color: $mono-mid
   font-size: $font-l
   font-weight: 700
   list-style: none
@@ -197,7 +197,7 @@ li.plupload_done a
 
 .plupload_file_name
   width: auto !important
-  color: $grey-dark
+  color: $mono-strong
 
 /* Call to action (drag and drop call)
 
