--- a/app/assets/stylesheets/visualization/drawing.sass
+++ b/app/assets/stylesheets/visualization/drawing.sass
@@ -1,4 +1,4 @@
-html#visualization 
+html#visualization
 
   #drawing
     min-height: 100%
@@ -11,7 +11,7 @@ html#visualization
         // stroke-width: 1px
 
       .arc
-        stroke: $grey-mid
+        stroke: $mono-mid
         stroke-width: 2px
 
       circle
@@ -19,14 +19,14 @@ html#visualization
 
 
       .node
-        circle 
-          fill: lighten($grey-mid,20%)
+        circle
+          fill: lighten($mono-mid,20%)
           &.origin
-          fill: lighten($grey-mid,20%)
+          fill: lighten($mono-mid,20%)
             stroke: black
 
       .node.MediaSet
-        circle 
+        circle
           fill: lighten($red,20%)
           &.origin
             fill: lighten($red,20%)
@@ -41,7 +41,7 @@ html#visualization
             stroke: black
 
 
-       
+
       .MediaEntryIncomplete
         fill: LightGray
 
@@ -58,7 +58,7 @@ html#visualization
           stroke: rgba(100,100,100,0.5)
           stroke-width: 1px
 
-        text.node_label_title 
+        text.node_label_title
           stroke: none
           fill: rgb(80,80,80)
 
