--- a/app/views/application/header/_user.html.haml
+++ b/app/views/application/header/_user.html.haml
@@ -37,6 +37,12 @@
               %i.icon-admin.ui-drop-icon.mid
               = _("Switch to admin mode")
       %li.separator
+      / %li.separator
+      / %li.ui-drop-item
+      /   %a{:href => _____ SAME PAGE _____ }
+      /     .icon-contrast.mid.ui-drop-icon
+      /     = _("Enable High Contrast Mode")
+      / %li.separator
       %li.ui-drop-item
         %a.strong{:href => "/logout"}
           %i.icon-power-off.ui-drop-icon
