--- a/app/views/media_resources/edit/fields/_meta_datum_departments.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_departments.html.haml
@@ -15,3 +15,4 @@
                                 :type => "text", 
                                 :"data-values" => MetaDepartment.relevant.collect {|department| {:label => department.to_s, :id => department.id}}.to_json}
         %a.multi-select-input-toggle
+          %i.icon-arrow-down
