--- a/app/views/media_resources/edit/fields/_meta_datum_people.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_people.html.haml
@@ -14,6 +14,7 @@
     %li.multi-select-input-holder.mbs
       %input.multi-select-input.form-autocomplete-person{:id => "resource[meta_data_attributes][#{@i}][value]", :type => "text"}
         %a.multi-select-input-toggle
+          %i.icon-arrow-down
 
     %a.button.small.form-widget-toggle
       %i.icon-privacy-private.small
