--- a/app/views/media_resources/edit/fields/meta_datum_meta_terms/_extensible_list.html.haml
+++ b/app/views/media_resources/edit/fields/meta_datum_meta_terms/_extensible_list.html.haml
@@ -14,3 +14,4 @@
     %li.multi-select-input-holder.mbs
       %input.multi-select-input.form-autocomplete-extensible-list{:type => "text", :"data-context" => definition.meta_context_name, :"data-meta_key" => definition.meta_key_id }
         %a.multi-select-input-toggle
+          %i.icon-arrow-down
