--- a/app/views/styleguide/4 Forms/_forms.html
+++ b/app/views/styleguide/4 Forms/_forms.html
@@ -511,7 +511,7 @@
 
               <li class="multi-select-input-holder">
                 <input type="text" class="multi-select-input">
-                <a class="multi-select-input-toggle" href="#"></a>
+                <a class="multi-select-input-toggle" href="#"><i class="icon-arrow-down"></i></a>
               </li>
             </ul>
           </div>
