--- a/app/assets/stylesheets/combos/_ui-collage.sass
+++ b/app/assets/stylesheets/combos/_ui-collage.sass
@@ -5,7 +5,7 @@
 
 .ui-collage
   +border-top-right-radius($border-radius-m)
-  background: $darkest
+  background: $mono-darkest
   margin: -1px -1px 0 -1px
   overflow: hidden
   padding: 1px
@@ -22,7 +22,7 @@
 
 .ui-collage-item
   display: table-cell
-  border: 1px solid $darkest
+  border: 1px solid $mono-darkest
   line-height: 0
   position: relative
   vertical-align: middle
@@ -69,7 +69,7 @@
   text-indent: $space-s
   text-align: left
   &:after
-    +background(linear-gradient(right, $brightest, rgba(255, 255, 255, 0)))
+    +background(linear-gradient(right, $mono-brightest, rgba(255, 255, 255, 0)))
     +dimension(20%, 100%)
     +position-top-right(0, 0)
     display: block
@@ -132,7 +132,7 @@
 
 .ui-collage.crooked
   +border-radius(0)
-  border-color: $darkest
+  border-color: $mono-darkest
   border-style: solid
   border-width: 2px 0
   margin: 0
