--- a/app/assets/stylesheets/combos/_ui-resources-miniature.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-miniature.sass
@@ -68,7 +68,7 @@
             +max-dimension(50px, 36px)
   // Video entries get pellicola background
   .ui-thumbnail.video .ui-thumbnail-image-wrapper
-    background: $brightest image-url("backgrounds/thumb-video-backg-small.png") 0 0px no-repeat
+    background: $mono-brightest image-url("backgrounds/thumb-video-backg-small.png") 0 0px no-repeat
   // Hiding stuff unnecessary in Miniature view
   .ui-thumbnail-level-up-items,
   .ui-thumbnail-level-down-items,
@@ -92,7 +92,7 @@
   .ui-thumbnail.media-entry,
   .ui-thumbnail.media-entry-incomplete
     +border-radius($border-radius-m)
-    background: $brightest
+    background: $mono-brightest
 
 /*
  * Media queries
@@ -110,5 +110,17 @@
       background: transparent image-url("backgrounds/thumb-set-backg-small@2x.png") -1px 0px no-repeat
       background-size: 82px 82px
     .ui-thumbnail.video .ui-thumbnail-image-wrapper
-      background: $brightest image-url("backgrounds/thumb-video-backg-small@2x.png") 0 0px no-repeat
+      background: $mono-brightest image-url("backgrounds/thumb-video-backg-small@2x.png") 0 0px no-repeat
       background-size: 58px 58px
+
+/* Projection Styles
+ *-----------------------------------------
+
+@if $projection
+
+  .ui-resources.miniature
+    .ui-thumbnail.media-set,
+    .ui-thumbnail.filter-set
+      background: transparent image-url("backgrounds/thumb-set-backg-small-projct.png") -1px 0px no-repeat
+    .ui-thumbnail.video .ui-thumbnail-image-wrapper
+      background: $mono-brightest image-url("backgrounds/thumb-video-backg-small-projct.png") 0 0px no-repeat
