--- a/app/assets/stylesheets/combos/_ui-side-filter.sass
+++ b/app/assets/stylesheets/combos/_ui-side-filter.sass
@@ -18,9 +18,9 @@
       border: none
 
 .ui-side-filter
-  +box-shadow(1px 0 0 $brightest)
+  +box-shadow(1px 0 0 $mono-brightest)
   +micro-clearfix
-  border-right: 1px solid $grey-mid-light
+  border-right: 1px solid $mono-light
   margin: 35px 20px 0 -20px
   min-width: 200px
   padding-right: $space-m
@@ -42,7 +42,7 @@
 .ui-side-filter-search
   +border-radius($border-radius-m)
   background: $darken
-  border: 1px solid $grey-mid-light
+  border: 1px solid $mono-light
   font-size: $font-xs
   font-weight: 700
   margin-bottom: $space-s
@@ -71,7 +71,7 @@
     +border-radius(50px)
     +min-dimension(12px, auto)
     +position-top-right(2px, 0)
-    color: $grey-mid
+    color: $mono-mid
     font-size: 10px
     font-weight: 700
     line-height: 1
@@ -84,14 +84,14 @@
   padding-right: 30px
 
 .ui-side-filter-lvl3-item.unknown
-  color: $grey-mid
+  color: $mono-mid
   font-style: italic
 
 .ui-side-filter-item
   +box-shadow(0 1px 0 $lighten-more)
-  border-bottom: 1px solid $grey-mid-light
+  border-bottom: 1px solid $mono-light
   &:last-child
-    +box-shadow(0 0 0 $brightest)
+    +box-shadow(0 0 0 $mono-brightest)
     border-bottom: none
 
 .ui-accordion-body
@@ -130,7 +130,7 @@
   +box-shadow(inset 0 1px 2px $darken)
   background: $darken-subtle
   .ui-lvl3-item-count
-    color: $grey-mid-dark
+    color: $mono-heavy
 
 .ui-side-filter-list
   position: relative
