--- a/app/assets/stylesheets/components/_department-autocomplete.sass
+++ b/app/assets/stylesheets/components/_department-autocomplete.sass
@@ -13,7 +13,7 @@
         padding-left: 28px
   .ui-navigator
     background: rgba(255, 255, 255, 0.9)
-    color: $grey-dark
+    color: $mono-strong
     display: block
     font-size: 0.9em
     overflow: hidden
