--- a/app/assets/stylesheets/components/_ui-drop-menus.sass
+++ b/app/assets/stylesheets/components/_ui-drop-menus.sass
@@ -37,7 +37,7 @@
   +min-dimension(220px, auto)
   +position-top-left(100%, 0)
   display: none
-  background: $grey-lighter
+  background: $mono-bright
   margin: $space-x 0
   padding: 0
   text-align: left
@@ -81,19 +81,19 @@
 .ui-drop-item a
   +single-text-shadow(none)
   padding: $space-x $space-s
-  color: $grey-darker
+  color: $mono-dark
   display: block
   list-style: none
   padding: $space-x $space-s
   white-space: nowrap
   &:hover
     background: $lighten-more
-    color: $grey-darker
+    color: $mono-dark
     text-decoration: none
   &:active
     +box-shadow(inset 0 1px 2px $darken)
     background: $darken-less
-    color: $grey-darker
+    color: $mono-dark
 
 .ui-drop-item:first-child a
   +border-top-radius($border-radius-m)
