--- a/app/assets/stylesheets/components/_ui-slider.sass
+++ b/app/assets/stylesheets/components/_ui-slider.sass
@@ -7,7 +7,7 @@
   +border-radius($border-radius-m)
   +box-shadow(inset 0 1px 2px $darken)
   +dimension(100%, 12px)
-  background: $grey-lighter
+  background: $mono-bright
   position: relative
 
 .ui-slider-handle
@@ -29,8 +29,8 @@
   +border-radius($border-radius-s)
   +box-shadow(inset 0 1px 0 $lighten-less, 0 1px 2px $darken)
   +position-bottom-left($space-m, 0)
-  border: 1px solid $darkest
-  color: $brightest
+  border: 1px solid $mono-darkest
+  color: $mono-brightest
   display: block
   font-size: $font-xs
   line-height: $line-height-xs
@@ -51,14 +51,14 @@
 
 .ui-slider-info:after
   border-color: rgba(212, 212, 13, 0)
-  border-top-color: $grey-darker
+  border-top-color: $mono-dark
   border-width: 5px
   left: 50%
   margin-left: -5px
 
 .ui-slider-info:before
   border-color: rgba(0, 0, 0, 0)
-  border-top-color: $darkest
+  border-top-color: $mono-darkest
   border-width: 6px
   left: 50%
   margin-left: -6px
