--- a/app/assets/stylesheets/general/_forms.sass
+++ b/app/assets/stylesheets/general/_forms.sass
@@ -8,8 +8,8 @@ input[type="password"],
 textarea
   +border-radius($border-radius-m)
   +box-shadow(inset 0 1px 3px $darken-less)
-  border: 1px solid $grey-mid-light
-  color: $grey-darker
+  border: 1px solid $mono-light
+  color: $mono-dark
   font-size: $font-m
   font-family: $default-font-family
   font-weight: 400
@@ -30,13 +30,13 @@ select
 /* Placeholder
  *-----------------------------------------
 \::-webkit-input-placeholder
-  color: lighten($grey-darker, 25%) !important
+  color: lighten($mono-dark, 25%) !important
 
 \:-moz-placeholder
-  color: lighten($grey-darker, 25%) !important
+  color: lighten($mono-dark, 25%) !important
 
 \:-ms-input-placeholder
-  color: lighten($grey-darker, 25%) !important
+  color: lighten($mono-dark, 25%) !important
 
 /* Full width elements
  *-----------------------------------------
@@ -77,7 +77,7 @@ textarea
  *-----------------------------------------
 
 .form-note
-  color: $grey-mid
+  color: $mono-mid
   font-size: $font-s
   margin-bottom: $space-s
 
