--- a/app/assets/stylesheets/general/_tables.sass
+++ b/app/assets/stylesheets/general/_tables.sass
@@ -10,7 +10,7 @@ table.block
   width: 100%
 
 thead td, thead th
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $mono-weak
   font-size: $font-xs
   font-weight: 700
 
@@ -22,14 +22,14 @@ tfoot td
   font-size: $font-xs
 
 caption
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $mono-weak
   font-weight: 700
   line-height: $line-height-m
   padding: $space-x 0
   text-align: left
 
 td, th
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $mono-weak
   line-height: $line-height-m
   padding: $space-x 0
   vertical-align: top
@@ -38,7 +38,7 @@ td, th
 //   border-bottom: none
 
 // .midtone td
-//   border-color: $grey-mid-light
+//   border-color: $mono-light
 
 /* Borderless Tables
  *----------------------------------------- */
