--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -3,15 +3,17 @@
  * ## Typography
  *
 
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700")
+
 body
-  color: $grey-darker
+  color: $mono-dark
   font-family: $default-font-family
-  font-size: $default-font-size
+  font-size: $font-m
   line-height: $line-height-m
 
 p,
 h1, h2, h3, h4, h5, h6
-  color: $grey-darker
+  color: $mono-dark
   font-family: $default-font-family
   font-weight: normal
 
@@ -71,7 +73,7 @@ h1, h2, h3, h4, h5, h6
 
 .title-xs-alt,
 .small-print
-  color: $grey-mid
+  color: $mono-mid
   font-size: $font-xs
   line-height: $line-height-l
 
@@ -87,9 +89,9 @@ h1, h2, h3, h4, h5, h6
  * Styleguide 2.2
 
 p
-  color: $grey-darker
+  color: $mono-dark
   font-family: $default-font-family
-  font-size: $default-font-size
+  font-size: $font-m
   line-height: $line-height-m
 
 .paragraph-l
